Correction alignement

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -27,6 +27,7 @@
 .custom-card {
     width: 350px;
     height: 350px;
+    text-align: left;
 }
 
 .home_recipe .img_recipe {
